ELS Code/main/default/objects/Reservation__c/fields/Active_Member__c.field-meta.xml
<CustomField>
    <fullName>Active_Member__c</fullName>
    <formula>IF( Contact__r.Number_of_Memberships__c &gt;=1, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Member?</label>
    <type>Checkbox</type>
</CustomField>