ELS Code/main/default/objects/Reservation__c/fields/Amount_due_before_taxes__c.field-meta.xml
<CustomField>
    <fullName>Amount_due_before_taxes__c</fullName>
    <description>Included in Jitterbit API_11_Upsert_Reservation Request &amp; Process_4_Upsert_Reservations Request transformations. Used in the Org Amount Due Before Taxes &amp; Discounts field.</description>
    <inlineHelpText>Gross value before taxes and discounts. Used in the Org Amount Due Before Taxes &amp; Discounts field.</inlineHelpText>
    <label>Current Charges Before Taxes &amp; Discounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>