ELS Code/main/default/objects/Reservation__c/fields/Annual__c.field-meta.xml
<CustomField>
    <fullName>Annual__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reservation with a number of nights &gt;185 days</description>
    <label>Annual</label>
    <type>Checkbox</type>
</CustomField>