ELS Code/main/default/objects/Reservation__c/fields/Annual_Survey_Deployment_Date__c.field-meta.xml
<CustomField>
    <fullName>Annual_Survey_Deployment_Date__c</fullName>
    <description>Date annual survey Revinate is sent to customers.</description>
    <inlineHelpText>Date annual survey Revinate is sent to customers.</inlineHelpText>
    <label>Annual Survey Deployment Date</label>
    <type>Date</type>
</CustomField>