ELS Code/main/default/objects/Reservation__c/fields/Arrival_Date_in_3_Days__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Date_in_3_Days__c</fullName>
    <formula>IF( Arrival_Date__c = Today()+3, TRUE, FALSE)</formula>
    <label>Arrival Date in 3 Days</label>
    <type>Checkbox</type>
</CustomField>