ELS Code/main/default/objects/Reservation__c/fields/Booked_By__c.field-meta.xml
<CustomField>
    <fullName>Booked_By__c</fullName>
    <label>Booked By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>