ELS Code/main/default/objects/Reservation__c/fields/Booked_Date_TT_Add_Date__c.field-meta.xml
<CustomField>
    <fullName>Booked_Date_TT_Add_Date__c</fullName>
    <formula>Booked_Date__c - Contact__r.Trails_Collection_Add_Date__c</formula>
    <label>Booked Date - TT Add Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>