ELS Code/main/default/objects/Reservation__c/fields/Booking_Time_Frame__c.field-meta.xml
<CustomField>
    <fullName>Booking_Time_Frame__c</fullName>
    <formula>Arrival_Date__c  -  Booked_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Time Frame</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>