ELS Code/main/default/objects/Reservation__c/fields/Campaign_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Last_Modified_Date__c</fullName>
    <formula>Campaign__r.LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Last Modified Date</label>
    <type>Date</type>
</CustomField>