ELS Code/main/default/objects/Reservation__c/fields/check_box_when_there_is_a_value_in_the__c.field-meta.xml
<CustomField>
    <fullName>check_box_when_there_is_a_value_in_the__c</fullName>
    <formula>IF(ISBLANK( Property_ID__c ),FALSE ,TRUE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>check box when there is a value in the</label>
    <type>Checkbox</type>
</CustomField>