ELS Code/main/default/objects/Reservation__c/fields/Checked_Out__c.field-meta.xml
<CustomField>
    <fullName>Checked_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checked Out</label>
    <type>Checkbox</type>
</CustomField>