ELS Code/main/default/objects/Reservation__c/fields/Client_ID_Flat__c.field-meta.xml
<CustomField>
    <fullName>Client_ID_Flat__c</fullName>
    <formula>ClientID__r.Name</formula>
    <label>Client ID Flat</label>
    <type>Text</type>
</CustomField>