ELS Code/main/default/objects/Reservation__c/fields/Client_ID_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Client_ID_Rollup__c</fullName>
    <formula>Contact__r.ClientID_Rollup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client ID Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>