ELS Code/main/default/objects/Reservation__c/fields/ClientID__c.field-meta.xml
<CustomField>
    <fullName>ClientID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>(ClientID)</label>
    <referenceTo>ClientID__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>