ELS Code/main/default/objects/Reservation__c/fields/Contact_Flag__c.field-meta.xml
<CustomField>
    <fullName>Contact_Flag__c</fullName>
    <formula>ClientID__r.Contact__c = Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Flag</label>
    <type>Checkbox</type>
</CustomField>