ELS Code/main/default/objects/Reservation__c/fields/Core_Yes_No__c.field-meta.xml
<CustomField>
    <fullName>Core_Yes_No__c</fullName>
    <label>Not TT  property</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>