ELS Code/main/default/objects/Reservation__c/fields/Days_After_Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_After_Departure_Date__c</fullName>
    <formula>TODAY() - Departure_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days After Departure Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>