ELS Code/main/default/objects/Reservation__c/fields/Days_Stay_of_Active_Reservation__c.field-meta.xml
<CustomField>
    <fullName>Days_Stay_of_Active_Reservation__c</fullName>
    <description># of days staying for active Reservation</description>
    <inlineHelpText># of days staying for active Reservation</inlineHelpText>
    <label>Days Stay of Active Reservation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>