ELS Code/main/default/objects/Reservation__c/fields/Department_Category__c.field-meta.xml
<CustomField>
    <fullName>Department_Category__c</fullName>
    <label>Booking Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>OTA</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>campUSA</fullName>
            </value>
            <value>
                <fullName>Expedia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>