ELS Code/main/default/objects/Reservation__c/fields/Departure_Date_Recently_Passed__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date_Recently_Passed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checkbox to determine whether a Reservation&apos;s departure date recently passed. Populated by BatchUpdateDaysUntilArrival</description>
    <label>Departure Date Recently Passed</label>
    <type>Checkbox</type>
</CustomField>