ELS Code/main/default/objects/Reservation__c/fields/Deposit_Balance__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Balance__c</fullName>
    <label>Deposit Balance</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>