ELS Code/main/default/objects/Reservation__c/fields/DG_Detele_Reservation__c.field-meta.xml
<CustomField>
    <fullName>DG_Detele_Reservation__c</fullName>
    <formula>IF(
((YEAR(    TODAY()    ) *12 + MONTH(  TODAY() )) - (YEAR(   Departure_Date__c   ) *12 + MONTH( Departure_Date__c))) &gt; 36 , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DG_Detele_Reservation</label>
    <type>Checkbox</type>
</CustomField>