ELS Code/main/default/objects/Reservation__c/fields/Discounts__c.field-meta.xml
<CustomField>
    <fullName>Discounts__c</fullName>
    <description>Included in Jitterbit API_11_Upsert_Reservation Request &amp; Process_4_Upsert_Reservations Request transformations.</description>
    <label>Current Discounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>