ELS Code/main/default/objects/Reservation__c/fields/Do_Not_Call__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Call__c</fullName>
    <formula>Contact__r.DoNotCall</formula>
    <label>Do Not Call</label>
    <type>Checkbox</type>
</CustomField>