ELS Code/main/default/objects/Reservation__c/fields/ELS_Products__c.field-meta.xml
<CustomField>
    <fullName>ELS_Products__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ELS Products</label>
    <referenceTo>ELS_Product__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>