ELS Code/main/default/objects/Reservation__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Property Front Desk Email</label>
    <type>Email</type>
</CustomField>