ELS Code/main/default/objects/Reservation__c/fields/Get_Directions_to_Property__c.field-meta.xml
<CustomField>
    <fullName>Get_Directions_to_Property__c</fullName>
    <formula>Property_ID__r.Get_Directions_to_Property_RVOTG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Get Directions to Property RVOTG</label>
    <type>Text</type>
</CustomField>