ELS Code/main/default/objects/Reservation__c/fields/Initial_Net_Site_Charges_w_Discount__c.field-meta.xml
<CustomField>
    <fullName>Initial_Net_Site_Charges_w_Discount__c</fullName>
    <label>Initial Net Site Charges w/Discount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>