ELS Code/main/default/objects/Reservation__c/fields/Made_Date__c.field-meta.xml
<CustomField>
    <fullName>Made_Date__c</fullName>
    <label>Made Date</label>
    <type>Date</type>
</CustomField>