ELS Code/main/default/objects/Reservation__c/fields/Membership_ID__c.field-meta.xml
<CustomField>
    <fullName>Membership_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership ID</label>
    <referenceTo>Membership__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>