ELS Code/main/default/objects/Reservation__c/fields/Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>Membership_Number__c</fullName>
    <label>(Membership ID)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>