ELS Code/main/default/objects/Reservation__c/fields/Membership_Reservation__c.field-meta.xml
<CustomField>
    <fullName>Membership_Reservation__c</fullName>
    <formula>IF(NOT(ISBLANK( Membership_ID__c )),IMAGE(&quot;img/icon/hands16.png&quot;,&quot;Member&quot;)+&quot; Member Reservation&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Reservation</label>
    <type>Text</type>
</CustomField>