ELS Code/main/default/objects/Reservation__c/fields/Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>Membership_Type__c</fullName>
    <formula>Membership_ID__r.Membership_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Type</label>
    <type>Text</type>
</CustomField>