ELS Code/main/default/objects/Reservation__c/fields/New_Rate_Class__c.field-meta.xml
<CustomField>
    <fullName>New_Rate_Class__c</fullName>
    <label>(New Rate Class)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-2 Months</fullName>
            </value>
            <value>
                <fullName>3-6 Months</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>MH Annual</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>PM Rental Inc</fullName>
            </value>
            <value>
                <fullName>RV/PM Annual</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>