ELS Code/main/default/objects/Reservation__c/fields/New_Rate_Class_Group__c.field-meta.xml
<CustomField>
    <fullName>New_Rate_Class_Group__c</fullName>
    <description>Site type and number of days to determine if its a transient, seasonal, or annual reservation if its someone on site with that many days or n/a if its something like storage or someone staying with a managers reservation ect</description>
    <label>New Rate Class Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Seasonal</fullName>
            </value>
            <value>
                <fullName>Transient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>