ELS Code/main/default/objects/Reservation__c/fields/Nights_between_Booked_Date_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Nights_between_Booked_Date_Arrival__c</fullName>
    <formula>Arrival_Date__c - Booked_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nights between Booked Date &amp; Arrival</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>