ELS Code/main/default/objects/Reservation__c/fields/Number_Of_Nights__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Nights__c</fullName>
    <formula>Departure_Date__c -  Arrival_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Of Nights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>