ELS Code/main/default/objects/Reservation__c/fields/On_Site__c.field-meta.xml
<CustomField>
    <fullName>On_Site__c</fullName>
    <formula>AND( Arrival_Date__c  &lt;= Today(), Departure_Date__c  &gt;= Today())</formula>
    <label>On-Site?</label>
    <type>Checkbox</type>
</CustomField>