ELS Code/main/default/objects/Reservation__c/fields/Org_Amount_Due_Before_Taxes_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Org_Amount_Due_Before_Taxes_Discounts__c</fullName>
    <inlineHelpText>Initial Amount due before taxes &amp; discounts. The value for this field does not change after the Created Date has passed to account for data entry errors or same-day changes or corrections. If Booked Date = Date Cancelled then $0.</inlineHelpText>
    <label>Org Charges Before Taxes &amp; Discounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>