ELS Code/main/default/objects/Reservation__c/fields/Org_Charges_After_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Org_Charges_After_Discounts__c</fullName>
    <formula>IF((ISBLANK(Org_Amount_Due_Before_Taxes_Discounts__c) || Org_Amount_Due_Before_Taxes_Discounts__c= 0),0,(
IF(
AND(
NOT(ISBLANK(Org_Amount_Due_Before_Taxes_Discounts__c)),
ISBLANK(Discounts__c)
),
Org_Amount_Due_Before_Taxes_Discounts__c-0,
IF(
AND(
NOT(ISBLANK(Org_Amount_Due_Before_Taxes_Discounts__c)),
NOT(ISBLANK(Discounts__c)),
Org_Amount_Due_Before_Taxes_Discounts__c&gt;Discounts__c
),
Org_Amount_Due_Before_Taxes_Discounts__c - Discounts__c,
0
)
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Org Charges After Discounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>