ELS Code/main/default/objects/Reservation__c/fields/Org_Charges_with_Discount__c.field-meta.xml
<CustomField>
    <fullName>Org_Charges_with_Discount__c</fullName>
    <label>Org Charges with Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>