ELS Code/main/default/objects/Reservation__c/fields/Org_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Org_Discounts__c</fullName>
    <description>Original discounted amount</description>
    <inlineHelpText>Original discounted amount</inlineHelpText>
    <label>Org Discounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>