ELS Code/main/default/objects/Reservation__c/fields/Original_Charges_After_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Original_Charges_After_Discounts__c</fullName>
    <formula>/*IF(
    AND(
        NOT(ISBLANK(Org_Amount_Due_Before_Taxes_Discounts__c)),
        ISBLANK(Discounts__c)
    ),
    Org_Amount_Due_Before_Taxes_Discounts__c-0,
    IF(
        AND(
            NOT(ISBLANK(Org_Amount_Due_Before_Taxes_Discounts__c)),
            NOT(ISBLANK(Discounts__c))
        ),
        Org_Amount_Due_Before_Taxes_Discounts__c -  Discounts__c,
        NULL
    )
)*/
/*IF((ISBLANK(Org_Amount_Due_Before_Taxes_Discounts__c) || Org_Amount_Due_Before_Taxes_Discounts__c= 0),0,(
IF(
AND(
NOT(ISBLANK(Org_Amount_Due_Before_Taxes_Discounts__c)),
ISBLANK(Discounts__c)
),
Org_Amount_Due_Before_Taxes_Discounts__c-0,
IF(
AND(
NOT(ISBLANK(Org_Amount_Due_Before_Taxes_Discounts__c)),
NOT(ISBLANK(Discounts__c))
),
Org_Amount_Due_Before_Taxes_Discounts__c - Discounts__c,
NULL
)
)))*/
/*IF((ISBLANK(Org_Amount_Due_Before_Taxes_Discounts__c) || Org_Amount_Due_Before_Taxes_Discounts__c= 0),0,( 
IF( 
AND( 
NOT(ISBLANK(Org_Amount_Due_Before_Taxes_Discounts__c)), 
ISBLANK(Discounts__c) 
), 
Org_Amount_Due_Before_Taxes_Discounts__c-0, 
IF( 
AND( 
NOT(ISBLANK(Org_Amount_Due_Before_Taxes_Discounts__c)), 
NOT(ISBLANK(Discounts__c)), 
Org_Amount_Due_Before_Taxes_Discounts__c&gt;Discounts__c 
), 
Org_Amount_Due_Before_Taxes_Discounts__c - Discounts__c, 
0 
) 
)))*/
Amount_due_before_taxes__c - Discounts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Org Amount Due Before Taxes &amp; Discounts less Discounts. If Org Amount Due Before Taxes is blank or less than Discounts then $0. If Discounts is blank then the same value as Org Amount Due Before Taxes &amp; Discounts.</inlineHelpText>
    <label>Current Charges After Current Discounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>