ELS Code/main/default/objects/Reservation__c/fields/Original_Charges_With_Discounts1__c.field-meta.xml
<CustomField>
    <fullName>Original_Charges_With_Discounts1__c</fullName>
    <formula>Org_Amount_Due_Before_Taxes_Discounts__c	- Org_Discounts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Org Charges After Org Discounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>