ELS Code/main/default/objects/Reservation__c/fields/Original_Charges_With_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Original_Charges_With_Discounts__c</fullName>
    <description>Original amount due before taxes less discounts as calculated at creation/cancellation OR 2nd to last amount after updates to either Amount Due Before Taxes and Discounts or Discounts fields.</description>
    <inlineHelpText>Original amount due before taxes less discounts as calculated at creation/cancellation OR 2nd to last amount after updates to either Amount Due Before Taxes and Discounts or Discounts fields.</inlineHelpText>
    <label>Org Charges After Org Discounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>