ELS Code/main/default/objects/Reservation__c/fields/Outbound_Call__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outbound Call</label>
    <type>Checkbox</type>
</CustomField>