ELS Code/main/default/objects/Reservation__c/fields/Package_Description__c.field-meta.xml
<CustomField>
    <fullName>Package_Description__c</fullName>
    <label>Package Description</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>