ELS Code/main/default/objects/Reservation__c/fields/Package_Yes_No__c.field-meta.xml
<CustomField>
    <fullName>Package_Yes_No__c</fullName>
    <label>Package (Yes/No)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>