ELS Code/main/default/objects/Reservation__c/fields/Pets__c.field-meta.xml
<CustomField>
    <fullName>Pets__c</fullName>
    <label>Pets</label>
    <length>10</length>
    <type>Text</type>
</CustomField>