ELS Code/main/default/objects/Reservation__c/fields/Policy_RVOTG__c.field-meta.xml
<CustomField>
    <fullName>Policy_RVOTG__c</fullName>
    <formula>Property_ID__r.Policy_RVOTG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy RVOTG</label>
    <type>Text</type>
</CustomField>