ELS Code/main/default/objects/Reservation__c/fields/Policy_TT__c.field-meta.xml
<CustomField>
    <fullName>Policy_TT__c</fullName>
    <formula>Property_ID__r.Policy_TT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy TT</label>
    <type>Text</type>
</CustomField>