ELS Code/main/default/objects/Reservation__c/fields/Pre_Pay_Token__c.field-meta.xml
<CustomField>
    <fullName>Pre_Pay_Token__c</fullName>
    <label>Pre-Pay Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>