ELS Code/main/default/objects/Reservation__c/fields/Promotional_Discount_Used__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Discount_Used__c</fullName>
    <label>Promotional Discount Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>