ELS Code/main/default/objects/Reservation__c/fields/Property_Acquisition_Year__c.field-meta.xml
<CustomField>
    <fullName>Property_Acquisition_Year__c</fullName>
    <formula>Property_ID__r.Acquisition_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Acquisition Year</label>
    <type>Text</type>
</CustomField>