ELS Code/main/default/objects/Reservation__c/fields/Property_Address1__c.field-meta.xml
<CustomField>
    <fullName>Property_Address1__c</fullName>
    <formula>Property_ID__r.Street__c</formula>
    <label>Property Address1</label>
    <type>Text</type>
</CustomField>