ELS Code/main/default/objects/Reservation__c/fields/Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Address__c</fullName>
    <formula>Property_ID__r.Street__c + BR()+
 Property_ID__r.City__c + &quot;, &quot;+  Property_ID__r.State__c + &quot; &quot; + Property_ID__r.Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Address</label>
    <type>Text</type>
</CustomField>