ELS Code/main/default/objects/Reservation__c/fields/Property_Core__c.field-meta.xml
<CustomField>
    <fullName>Property_Core__c</fullName>
    <formula>Property_ID__r.Core__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Core</label>
    <type>Text</type>
</CustomField>