ELS Code/main/default/objects/Reservation__c/fields/Property_Events__c.field-meta.xml
<CustomField>
    <fullName>Property_Events__c</fullName>
    <formula>Property_ID__r.Property_Events_RVOTG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Events RVOTG</label>
    <type>Text</type>
</CustomField>