ELS Code/main/default/objects/Reservation__c/fields/Property_Events_TT__c.field-meta.xml
<CustomField>
    <fullName>Property_Events_TT__c</fullName>
    <formula>Property_ID__r.Property_Events_TT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Events TT</label>
    <type>Text</type>
</CustomField>