ELS Code/main/default/objects/Reservation__c/fields/Property_Fr_code__c.field-meta.xml
<CustomField>
    <fullName>Property_Fr_code__c</fullName>
    <formula>Property_ID__r.Fr_code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Fr_code</label>
    <type>Text</type>
</CustomField>