ELS Code/main/default/objects/Reservation__c/fields/Property_ID__c.field-meta.xml
<CustomField>
    <fullName>Property_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property ID</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>