ELS Code/main/default/objects/Reservation__c/fields/Property_ID_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_ID_Name__c</fullName>
    <formula>Property_ID__r.Property_Name__c</formula>
    <label>(Property ID Name)</label>
    <type>Text</type>
</CustomField>