ELS Code/main/default/objects/Reservation__c/fields/Property_Market__c.field-meta.xml
<CustomField>
    <fullName>Property_Market__c</fullName>
    <formula>Property_ID__r.Market__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Market</label>
    <type>Text</type>
</CustomField>