ELS Code/main/default/objects/Reservation__c/fields/Property_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Name__c</fullName>
    <label>(Property Name)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>