ELS Code/main/default/objects/Reservation__c/fields/Property_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Property_Phone_Number__c</fullName>
    <formula>Property_ID__r.Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Phone Number</label>
    <type>Text</type>
</CustomField>