ELS Code/main/default/objects/Reservation__c/fields/Property_State_2__c.field-meta.xml
<CustomField>
    <fullName>Property_State_2__c</fullName>
    <formula>Property_ID__r.State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property State</label>
    <type>Text</type>
</CustomField>