ELS Code/main/default/objects/Reservation__c/fields/Property_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Street_Address__c</fullName>
    <description>Street number and name for property</description>
    <formula>Property_ID__r.Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Street Address</label>
    <type>Text</type>
</CustomField>