ELS Code/main/default/objects/Reservation__c/fields/Property_Website__c.field-meta.xml
<CustomField>
    <fullName>Property_Website__c</fullName>
    <formula>Property_ID__r.Property_Website_RVOTG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Website RVOTG</label>
    <type>Text</type>
</CustomField>