ELS Code/main/default/objects/Reservation__c/fields/Property_Zip__c.field-meta.xml
<CustomField>
    <fullName>Property_Zip__c</fullName>
    <formula>Property_ID__r.Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Zip</label>
    <type>Text</type>
</CustomField>