ELS Code/main/default/objects/Reservation__c/fields/PropertyRobotID__c.field-meta.xml
<CustomField>
    <fullName>PropertyRobotID__c</fullName>
    <formula>Property_ID__r.Robot_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Robot ID</label>
    <type>Text</type>
</CustomField>